syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "RankServiceProtos";

enum ERankRequestType{
	RANK_LIST = 1;//排行列表
	RANK_HERO_INFO = 2;//排行榜单个玩家信息
	RANK_LIST_PART1 = 3;//分包排行列表
	RANK_LIST_PART2 = 4;//分包排行列表
}

enum ERankResultType{
	SUCCESS = 0;//成功
	NOT_LEVEL = 1;//等级不足
}

message MsgRankRequest{
	required ERankRequestType requestType = 1;//前端请求信息类型
	required int32 rankType = 2;//排行类型
	optional string userId = 3;//玩家ID
}

message MsgRankResponse{
	required ERankRequestType requestType = 1;
	optional int32 rankType = 2;
	optional ERankResultType resultType = 3;
	optional RankInfo myRankInfo = 4;//玩家基本信息	
	repeated RankInfo RankList = 5;//排行列表
	optional BaseRankInfo baseRankInfo = 6;//个人排行基础信息
}

message RankInfo{
	optional string heroUUID = 1;//英雄ID
	optional int32 rankingLevel = 2;//排名
	optional int32 level = 3;//用户等级
	optional string heroName = 4;//用户名字
	optional string imageId = 5;//头像ID
	optional int32 job = 6;//职业
	optional int32 modelId = 7;//模型ID
	optional int32 fightingAll = 8;//总战斗力
	optional int32 fightingTeam = 9;//队伍战斗力	
	optional int32 rankCount = 10;//排名升降位数
	optional string grouopName = 11; //帮派名字
}

message BaseRankInfo{
	optional int32 fightingAll = 1;//全员战斗力排行
	optional int32 levelAll = 2;//全员等级排行
	optional int32 jobDay = 3;//本职业每日排行
	optional int32 jobCurrent = 4;//本职业实时排行
	optional int32 athleticsDay = 5;//巅峰竞技每日排行
	optional int32 athleticsCurrent = 6;//巅峰竞技实时排行
	optional int32 team = 7;//五人小队排行
	optional int32 endless = 8;//无尽战火排行
	optional int32 glory = 9;//荣耀山谷排行
	optional int32 athleticsFighting = 10;//巅峰竞技战斗力排行
	repeated RankingTeamData teamData = 11;//队伍数据
	optional int32 arenaWinCount = 12;//竞技场胜场次数
}

message RankingTeamData{
	required RankingMagicData magicData = 1;//法宝数据
	repeated RankingHeroData heroList = 2;//佣兵列表
}

message RankingHeroData{
	required string heroId = 1;//ID
	required int32 level = 2;//等级
	required int32 starLevel = 3;//星级
	required string quality = 4;//品质
	required string heroHead = 5;//佣兵图像
}

message RankingMagicData{
	required string magicImage = 1;//法宝图像
	required int32 magicQuality = 2;//法宝品质
	required int32 magicAttackType = 3;//法宝攻击类型
}

